# Weather-ascii

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  homebrew-dry-run.yml  homebrew.yml  release.yml
nix/: hm-module.nix  package.nix  shell.nix
src/: animation_manager.rs  app.rs  app_state.rs  cache.rs  config.rs  error.rs  geolocation.rs  lib.rs  main.rs
src/animation/: airplanes.rs  birds.rs  chimney.rs  clouds.rs  fireflies.rs  fog.rs  leaves.rs  mod.rs  moon.rs  raindrops.rs  smog.rs  snow.rs  stars.rs  sunny.rs  thunderstorm.rs  ufo.rs
src/render/: capabilities.rs  mod.rs
src/scene/: decorations.rs  ground.rs  house.rs  mod.rs
src/weather/: air_quality.rs  client.rs  mod.rs  normalizer.rs  open_meteo.rs  provider.rs  types.rs  units.rs
tests/: config_integration_test.rs  error_test.rs  weather_client_integration_test.rs  weather_normalizer_integration_test.rs
